fix attacks name overflow

--- a/styles/sidebar/_actions.scss
+++ b/styles/sidebar/_actions.scss
@@ -222,6 +222,11 @@
                 img {
                     height: var(--action-image-height);
                 }
+
+                a {
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
             }
         }
 
